--- a/css/style.css
+++ b/css/style.css
@@ -136,10 +136,10 @@ nav ul li a:hover {
 }
 
 .band-info p::selection {
-    background: #333;
+    background: #d1c5c5;
 }
 .band-info h1::selection{
-    background: #333;
+    background: #d1c5c5;
 }
 
 .band-info a {
@@ -148,27 +148,23 @@ nav ul li a:hover {
 }
 
 .band-info a:hover {
-    color: #979797;
+    color: #1ed760 ;
 }
 
 .band-info span {
     font-weight: bold;
 }
 .band-info span::selection{
-    background: #333;
+    background: #d1c5c5;
 }
 
 /* DIVISION DE CONTENIDO */
 .division {
     width: 100%;
     height: 30px;
-    background-color: #000;
+    background-color: #191414;
     padding: 0px 25px;
     margin: 0;
-}
-
-.division h1 {
-    opacity: 0;
 }
 
 .division-r {
@@ -348,7 +344,7 @@ nav ul li a:hover {
 }
 .pie-pagina a{
     text-decoration: none;
-    color: #000;
+    color: #fff;
 }
 .pie-pagina a:hover{
     background: #202021;
